updating html with personal information

--- a/index.html
+++ b/index.html
@@ -13,26 +13,27 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Macenna Cowen</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Student at the George Washington University, majoring in Geography, minoring in statistics. Class of 2021.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from Miami, FL.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy going outside, baking, working out, and hanging out with my friends.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>CEO</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Washington, DC.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To grow my skillset from the front end to the back end so I can better utilize my statistical analysis framework.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/Macenna">Github</a></li>
+          <li><a href="https://www.linkedin.com/in/macenna-cowen/">LinkedIn</a></li>
         </ul>
     </footer>
 </body>
